# skills_matcher

./: .dockerignore  Dockerfile  README.md  api.py  decision.md  docker-compose.yml  main.py  pyproject.toml  sample-curl.sh
.github/: copilot-instructions.md
data/: matched_skills.json  skills.txt  skills_embeddings.pt
data/database/: metadata_superSkill.json
data/test/: rawskills_samples.xlsx  test_extract_skills.py  test_matcher.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/tasks/: TASK001-mongodb-integration.md  TASK002-excel-export-endpoint.md  _index.md
notebooks/: Main Flow.ipynb
src/config/: config.py
src/core/: matcher.py
src/utils/: extract_skills.py  fix_input_schema.py
